[gd_scene load_steps=12 format=2]

[ext_resource path="res://art_exports/ui_HUD/ui_HUD_icon_item.png" type="Texture" id=1]
[ext_resource path="res://art_exports/ui_HUD/ui_HUD_icon_skill.png" type="Texture" id=2]
[ext_resource path="res://art_exports/ui_HUD/ui_HUD_icon_fight.png" type="Texture" id=3]
[ext_resource path="res://art_exports/ui_HUD/ui_HUD_icon_defend.png" type="Texture" id=4]
[ext_resource path="res://combat/CombatIcons.gd" type="Script" id=5]
[ext_resource path="res://art_exports/ui_HUD/ui_submenu_arrow.png" type="Texture" id=6]
[ext_resource path="res://util/Bouncer.tscn" type="PackedScene" id=7]
[ext_resource path="res://img/combat/combat-mockup-2.png" type="Texture" id=8]
[ext_resource path="res://combat/MoveListIcon.gd" type="Script" id=9]
[ext_resource path="res://font/portrait_font.tres" type="DynamicFont" id=10]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 36, 5 ), Vector2( 36, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ) ]
}

[node name="CombatIcons" type="Control"]
margin_left = 36.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 431.667, -821.041 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 783.0, 741.863, -102.644 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 60.3019, 111.083, 562.769, 613.55 ]
}

[node name="combat-mockup-2" type="Sprite" parent="."]
visible = false
position = Vector2( 338.634, -132.298 )
texture = ExtResource( 8 )

[node name="IconFight" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -177.0
margin_right = 114.0
margin_bottom = -3.99985
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 54, 173 )
texture = ExtResource( 3 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IconFight"]
margin_left = 14.0
margin_top = -35.0
margin_right = 69.0
custom_fonts/font = ExtResource( 10 )
text = "Fight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconDefend" type="TextureRect" parent="."]
margin_left = 185.0
margin_top = -155.0
margin_right = 301.0
margin_bottom = -4.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 58, 151 )
texture = ExtResource( 4 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
skill_type = "defend"

[node name="Label" type="Label" parent="IconDefend"]
margin_left = 13.0
margin_top = -57.0
margin_right = 88.0
margin_bottom = -22.0
custom_fonts/font = ExtResource( 10 )
text = "Defend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconSkill" type="TextureRect" parent="."]
margin_left = 85.0
margin_top = -176.0
margin_right = 205.0
margin_bottom = -3.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 60, 173 )
texture = ExtResource( 2 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
skill_type = "skill"

[node name="Label" type="Label" parent="IconSkill"]
margin_left = 12.0
margin_top = -36.0
margin_right = 68.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 10 )
text = "Skills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconItem" type="TextureRect" parent="."]
margin_left = 287.0
margin_top = -130.0
margin_right = 411.0
margin_bottom = -11.9996
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 62, 118 )
texture = ExtResource( 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
skill_type = "item"

[node name="Label" type="Label" parent="IconItem"]
margin_left = 30.0
margin_top = -76.0
margin_right = 80.0
margin_bottom = -41.0
custom_fonts/font = ExtResource( 10 )
text = "Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="CharSwitchLeft" type="Control" parent="."]
margin_left = -3.03726
margin_top = -70.0237
margin_right = 36.9627
margin_bottom = -30.0237
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bouncer" parent="CharSwitchLeft" instance=ExtResource( 7 )]

[node name="Icon" type="TextureRect" parent="CharSwitchLeft/Bouncer"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -91.0
margin_right = 9.0
margin_bottom = -71.0
rect_rotation = 90.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharSwitchLeft/Bouncer"]
margin_left = -34.0
margin_top = -88.0
margin_right = 6.0
margin_bottom = -53.0
custom_fonts/font = ExtResource( 10 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharSwitchRight" type="Control" parent="."]
margin_left = 425.834
margin_top = -69.522
margin_right = 465.834
margin_bottom = -29.522
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bouncer" parent="CharSwitchRight" instance=ExtResource( 7 )]
bounce_vector = Vector2( 20, 0 )

[node name="Icon" type="TextureRect" parent="CharSwitchRight/Bouncer"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -50.0
margin_right = 26.0
margin_bottom = -30.0
rect_rotation = -90.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharSwitchRight/Bouncer"]
margin_left = -33.0
margin_top = -88.0
margin_right = 7.0
margin_bottom = -53.0
custom_fonts/font = ExtResource( 10 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}
